--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "formidable": "^3.5.4",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^9.0.0",
+    "cloudinary": "^1.41.0",
     "next": "16.0.4",
     "react": "19.2.0",
     "react-dom": "19.2.0"
